fix(list-item, stack): stretch dropdown when placed inside a list-item or stack (#8204)
**Related Issue:** #8185

## Summary

- stretch dropdown component in list-item and stack

--- a/packages/calcite-components/src/components/stack/stack.scss
+++ b/packages/calcite-components/src/components/stack/stack.scss
@@ -65,7 +65,8 @@
 .actions-end {
   ::slotted(calcite-action),
   ::slotted(calcite-action-menu),
-  ::slotted(calcite-handle) {
+  ::slotted(calcite-handle),
+  ::slotted(calcite-dropdown) {
     @apply self-stretch;
 
     color: inherit;
